Added authorities